# grammatica

./: .gitignore  CHANGELOG.md  INSTRUCTIONS.md  LIBGEOS_C_API_STYLE_GUIDE.md  Makefile  README.md  environment.yml  prompt.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.md  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/bump-version/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-conda/: action.yml
.github/workflows/: stale-pr.yml  ubuntu.yml
.serena/: .gitignore  c_project.yml  project.yml  python_project.yml
c/: .clang-format  CMakeLists.txt  CODE_REVIEW_AND_IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  Makefile  README.md  test_string_null_byte.c
c/examples/: example.c  utils_usage_example.c
c/include/: grammatica.h  grammatica_constants.h  grammatica_group.h  grammatica_internal.h  grammatica_utils.h
c/include/grammatica/: common.h  constants.h  string_builder.h  utils.h
c/include/grammatica/grammar/: base.h  string.h
c/src/: and.c  arena.c  char_range.c  common.c  common.h  constants.c  constants_test.c  convenience.c  derivation_rule.c  grammar_base.c  grammatica.h  group_base.c  or.c  string.c  string_builder.c  string_builder.h  string_builder_test.c  utils.c  utils_test.c
c/src/grammar/: base.c  base.h  base_test.c  char_range.c  char_range.h  char_range_test.c  derivation_rule.c  derivation_rule.h  grammar.c  grammar.h  grammar_test.c  string.c  string.h
c/tests/: test_and.cpp  test_char_range.cpp  test_constants.cpp  test_derivation_rule.cpp  test_grammar_base.cpp  test_group_base.cpp  test_or.cpp  test_string.cpp  test_utils.cpp
c/tests/grammar/: test_char_range.cpp  test_derivation_rule.cpp  test_grammar.cpp  test_string.cpp
ci/: run_tests.sh
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom-icons.js  grammatica.css
docs/source/_templates/autosummary/: attribute.rst  base.rst  class.rst  module.rst
docs/source/api_reference/: grammar.rst  index.rst  or.rst  string.rst
docs/source/api_reference/builder/json_/: array_.rst  array__literal.rst  boolean.rst  boolean_literal.rst  index.rst  integer.rst  integer_literal.rst  null.rst  string.rst  string_literal.rst
docs/source/api_reference/grammar/: char_range.rst  derivation_rule.rst  index.rst  string.rst
docs/source/api_reference/grammar/group/: and_.rst  or_.rst
docs/source/api_reference/group/: or_.rst
docs/source/getting_started/: index.rst
scripts/: autobuild_docs.sh  run_doctests.py  serve_locally.py
src/grammatica/: __init__.py  base.py  constants.py  utils.py
src/grammatica/builder/: base.py
src/grammatica/builder/json_/: __init__.py  base.py  boolean.py  constants.py  float_.py  integer.py  null.py  string.py  type_aliases.py  utils.py
src/grammatica/builder/json_/group/: __init__.py  array_.py  base.py  object_.py
src/grammatica/grammar/: __init__.py  base.py  base_group.py  char_range.py  derivation_rule.py  grammar.py  or_group.py  string.py
src/grammatica/grammar/group/: __init__.py  and_.py  base.py  or_.py
tests/: helpers.py  test_constants.py  test_utils.py
tests/builder/json_/: test_boolean.py  test_integer.py  test_null.py  test_string.py
tests/grammar/: helpers.py  test_base.py  test_base_group.py  test_char_range.py  test_derivation_rule.py  test_grammar.py  test_or_grammar.py  test_string.py  test_utils.py
tests/grammar/group/: test_and.py  test_base.py  test_or.py
